<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65px"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlyBack"
            android:layout_width="45px"
            android:layout_height="45px"
            android:layout_marginTop="20px"
            android:gravity="center">

            <ImageView
                android:layout_width="12px"
                android:layout_height="18px"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_left"/>

        </RelativeLayout>

        <com.qiumi.app.support.component.FontTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:layout_centerHorizontal="true"
            app:fontName="@string/font_pf_medium"
            android:textColor="@color/black_33"
            android:textSize="17px"
            android:text="@string/safe_center"/>

    </RelativeLayout>

    <!-- 绑定手机 -->
    <LinearLayout style="@style/safe_center_item_parent">

        <com.qiumi.app.support.component.FontTextView
            style="@style/safe_center_item_left_text"
            app:fontName="@string/font_pf_medium"
            android:text="@string/safe_center_bind_phone" />

        <com.qiumi.app.support.component.FontTextView
            android:id="@+id/tvTelephone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            app:fontName="@string/font_pf_regular"
            android:textColor="#999999"
            android:textSize="15px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E7E7E7" />

    <!-- 设置支付密码 -->
    <LinearLayout
        android:id="@+id/ll_set_password"
        style="@style/safe_center_item_parent">

        <com.qiumi.app.support.component.FontTextView
            style="@style/safe_center_item_left_text"
            app:fontName="@string/font_pf_medium"
            android:text="@string/safe_center_set_password" />

        <com.qiumi.app.support.component.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontName="@string/font_pf_regular"
            android:text="@string/safe_center_go_setting"
            android:textColor="#999999"
            android:textSize="14px" />

        <ImageView style="@style/safe_center_item_icon_right" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E7E7E7" />

    <!-- 修改登录密码 -->
    <LinearLayout
        android:id="@+id/ll_change_login_password"
        style="@style/safe_center_item_parent">

        <com.qiumi.app.support.component.FontTextView
            style="@style/safe_center_item_left_text"
            app:fontName="@string/font_pf_medium"
            android:text="@string/safe_center_change_password" />

        <ImageView style="@style/safe_center_item_icon_right" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E7E7E7" />

</LinearLayout>