<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65px"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlyBack"
            android:layout_width="45px"
            android:layout_height="45px"
            android:layout_marginTop="20px"
            android:gravity="center">

            <ImageView
                android:layout_width="12px"
                android:layout_height="18px"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_left"/>

        </RelativeLayout>

        <com.qiumi.app.support.component.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30px"
            android:layout_marginRight="17px"
            app:fontName="@string/font_pf_medium"
            android:textColor="@color/black_33"
            android:textSize="13px"
            android:text="基本实名认证 - 确认"/>

        
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:layout_marginTop="15px"
        android:background="@color/white"
        android:gravity="center_vertical">

        <com.qiumi.app.support.component.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15px"
            android:textColor="@color/black_33"
            android:layout_marginLeft="16px"
            app:fontName="@string/font_pf_medium"
            android:text="@string/message_code"
            android:layout_centerVertical="true"/>


        <com.qiumi.app.support.component.FontEditTextView
            android:id="@+id/et_message_code"
            android:layout_width="140px"
            android:layout_height="25px"
            android:layout_marginLeft="105px"
            android:hint="@string/input_sms_code"
            android:textColorHint="@color/black_99"
            android:textSize="13px"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:background="@null"
            app:fontName="@string/font_pf_regular"
            android:layout_centerVertical="true"/>

        <com.qiumi.app.support.component.FontTextView
            android:id="@+id/tv_get_message_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16px"
            app:fontName="@string/font_pf_regular"
            android:text="@string/get_message_code_again"
            android:textSize="13px"
            android:textColor="@color/blue"
            android:gravity="center" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <com.qiumi.app.support.component.FontTextView
        android:id="@+id/tvSure"
        android:layout_width="match_parent"
        android:layout_height="47px"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        android:layout_marginBottom="30px"
        android:background="@color/blue_36f"
        app:fontName="@string/font_pf_medium"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="17px"
        android:text="@string/sure"/>

</LinearLayout>
